static.css the style="" attributes and fix download.html in large fonts.
I've spent a lot of time debugging the style="" attributes in the HTML
which over-rided all my changes to the stylesheet. I got rid of them
and replaced them with saner ones in the static.css.

I also fixed the fact that when resizing fonts the right column sometimes
overflowed to be placed below the left one.


git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@7595 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/template.padre.perlide.org/documentroot/static/static.css
+++ b/template.padre.perlide.org/documentroot/static/static.css
@@ -57,8 +57,16 @@ div#content {
     margin: 0 50pt;     
 }
 
-div#column_a { width: 69%;float: left }
-div#column_b { width: 29%;float: right}
+div#column_a { 
+    width: 49%; 
+    float: left;
+    margin-right: 5pt;
+}
+div#column_b {
+    width: 49%; 
+    float:right;
+    margin-left: 5pt;
+}
 
 
 
@@ -153,13 +161,15 @@ ul.unstyled {
 }
 
 div.column_a {
-    width: 48%;
+    width: 38%;
 	float: left;
+    margin-right: 3pt;
 }
 
 div.column_b {
-	width: 48%;
+	width: 38%;
 	float: right;
+    margin-left: 3pt;
 }
 
 .title_image {
